Twitter OAUTH WIP ADDED

--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "passport-github": "^1.1.0",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "rethinkdb-websocket-server": "^0.6.0",
     "thinky": "^2.3.4",
     "winston": "^2.2.0"
