--- a/server/package.json
+++ b/server/package.json
@@ -59,6 +59,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
