--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,7 @@
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^2.1.0",
