--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "history": "^4.2.0",
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
+    "mdbootstrap": "^4.2.0",
     "moment": "^2.17.0",
     "pushstate-server": "^2.1.0",
     "react": "^15.3.2",
